Fixed sticky footer issue on Safari Browser

--- a/team-generator-react/src/css/body.scss
+++ b/team-generator-react/src/css/body.scss
@@ -21,7 +21,7 @@ body {
 #root {
      display: flex;
      flex-direction: column;
-     height: 100%;
+     min-height: 100%;
 }
 
 .content {
