--- a/team-generator-react/src/index.css
+++ b/team-generator-react/src/index.css
@@ -20,7 +20,7 @@ body {
 #root {
   display: flex;
   flex-direction: column;
-  height: 100%;
+  min-height: 100%;
 }
 
 .content {
@@ -102,6 +102,7 @@ h3 {
 @media (min-width: 600px) {
   .wrapper {
     display: flex;
+    min-height: 100%;
   }
 }
 @media (max-width: 600px) {
